# latent-evasion-mars

./: .gitignore  LICENSE  README.md  cle-a.py  cle-p.py  optuna_search.py  pyproject.toml  requirements.txt
classifier/: train_latent.py
dataset/: load_dataset.py
dataset/processed/: harmbench_val.json  strong_reject.json
experiments/: BASELINES.md  README.md  agentharm-refusal-tracker.md  agentic_cle.py  agentic_probe.py  check_logs.py  cle_a_agentic_design.md  dgx-setup.md  diagnose_separation.py  ensemble_rules.py  eval_probe.py  extract_token_scores.py  full_run_graded.py  gemma4_baseline_vllm_full.py  gemma4_baseline_vllm_mini.py  gemma4_probe_dissociation.py  gemma4_smoke.py  judge_confusion.py  m0a_hidden_states.py  m0b_dataset.py  mini_run.py  multistep_dissociation.py  plot_cle_mechanism.py  plot_steering_pca.py  plot_steering_shift.py  plot_token_layer_scores.py  pod-requirements.txt  pod_bootstrap.sh  pod_setup.sh  pod_setup_cuda13.sh  pod_setup_h100.sh  probe_adapter.py  probe_all_layers.py  probe_confusion.py  probe_io.py  probe_metrics.py  pull_pod_results.sh  qwen35_agentic_dissociation.py  qwen35_agentic_val_extract.py  qwen35_baseline.py  (+18 more)
experiments/results/: README.md  confusion_compare.py  judge_conf_plot.py  judge_roc.py  plot_results.py  probe_all_layers.json  probe_confusion.json  probe_metrics.json  results_full.json  roc_layers_plot.py
experiments/results/00-baseline/: README.md  (+2 more)
models/: __init__.py  deepseek_r1.py  gemma3.py  gemma4.py  gpt.py  language_models.py  llama2.py  llama3.py  llama32.py  ministral3.py  mistralRR.py  mistral_instruct.py  mixtral.py  olmo3.py  phi3mini.py  phi4.py  qwen2.py  qwen35.py  system_prompts.py
utils/: args.py  eval_jailbreaks.py  hooks.py  margin_utils.py  models_utils.py  probes.py  runtime.py
(+119 files in other folders)
